Resolve responsive design misalignments

--- a/client/src/app/nba/player-item/player-item.component.css
+++ b/client/src/app/nba/player-item/player-item.component.css
@@ -131,7 +131,7 @@
 
 .player-inner .player-stat.player-team {
     padding: 10px 20px 4px 20px;
-    
+
 }
 
 .player-inner .player-stat.player-team a {
@@ -275,4 +275,22 @@
         width: 100%;
     }
 
+}
+
+
+@media screen and (max-width: 520px) {
+    .player-title h1#player-main-title {
+        margin-left: auto;
+        margin-right: 0;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .player-title h1#player-main-title {
+        margin-left: 50px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 1;
+    }
 }
